pushpop.css
html, body {
  width: 100%;
  height: 100%;
}

html.transition, html.transition > body {
  overflow: hidden;
}

.view {
  border: 0;
  display: none;
  position: relative;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

.view.active {
  display: block;
}

.view.push, .view.pop {
  display: block;
  position: absolute;
}

/* slideHorizontal */
.view.slideHorizontal {
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.view.push.slideHorizontal {
  -webkit-transform: translate3d(100%, 0, 0);
  -moz-transform: translateX(100%);
  -o-transform: translateX(100%);
  transform: translateX(100%);
}

.view.push.slideHorizontal.transition {
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translateX(0);
  -o-transform: translateX(0);
  transform: translateX(0);
}

.view.push.slideHorizontal.active {
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translateX(0);
  -o-transform: translateX(0);
  transform: translateX(0);
}

.view.push.slideHorizontal.active.transition {
  -webkit-transform: translate3d(-100%, 0, 0);
  -moz-transform: translateX(-100%);
  -o-transform: translateX(-100%);
  transform: translateX(-100%);
}

.view.pop.slideHorizontal {
  -webkit-transform: translate3d(-100%, 0, 0);
  -moz-transform: translateX(-100%);
  -o-transform: translateX(-100%);
  transform: translateX(-100%);
}

.view.pop.slideHorizontal.transition {
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translateX(0);
  -o-transform: translateX(0);
  transform: translateX(0);
}

.view.pop.slideHorizontal.active {
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translateX(0);
  -o-transform: translateX(0);
  transform: translateX(0);
}

.view.pop.slideHorizontal.active.transition {
  -webkit-transform: translate3d(100%, 0, 0);
  -moz-transform: translateX(100%);
  -o-transform: translateX(100%);
  transform: translateX(100%);
}

/* slideVertical */
.view.slideVertical {
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.view.push.slideVertical {
  z-index: 1;
  -webkit-transform: translate3d(0, -100%, 0);
  -moz-transform: translateY(-100%);
  -o-transform: translateY(-100%);
  transform: translateY(-100%);
}

.view.push.slideVertical.transition {
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translateY(0);
  -o-transform: translateY(0);
  transform: translateY(0);
}

.view.push.slideVertical.active {
  z-index: 0;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translateY(0);
  -o-transform: translateY(0);
  transform: translateY(0);
}

.view.push.slideVertical.active.transition {
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translateY(0);
  -o-transform: translateY(0);
  transform: translateY(0);
}

.view.pop.slideVertical {
  z-index: 0;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translateY(0);
  -o-transform: translateY(0);
  transform: translateY(0);
}

.view.pop.slideVertical.transition {
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translateY(0);
  -o-transform: translateY(0);
  transform: translateY(0);
}

.view.pop.slideVertical.active {
  z-index: 1;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translateY(0);
  -o-transform: translateY(0);
  transform: translateY(0);
}

.view.pop.slideVertical.active.transition {
  -webkit-transform: translate3d(0, -100%, 0);
  -moz-transform: translateY(-100%);
  -o-transform: translateY(-100%);
  transform: translateY(-100%);
}

/* flipHorizontal (WebKit-only) */
.view.flipHorizontal {
  -webkit-transition: all 1s ease;
  transition: all 1s ease;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.view.push.flipHorizontal {
  -webkit-transform: perspective(2000) rotate3d(0, 1, 0, 180deg);
  transform: rotateY(180deg);
  -webkit-box-shadow: inset 0 0 0 99999px rgba(0, 0, 0, 0.5);
  box-shadow: inset 0 0 0 99999px rgba(0, 0, 0, 0.5);
}

.view.push.flipHorizontal.transition {
  -webkit-transform: perspective(2000) rotate3d(0, 1, 0, 0deg);
  transform: rotateY(0deg);
  -webkit-box-shadow: inset 0 0 0 99999px rgba(0, 0, 0, 0);
  box-shadow: inset 0 0 0 99999px rgba(0, 0, 0, 0);
}

.view.push.flipHorizontal.active {
  -webkit-transform: perspective(2000) rotate3d(0, 1, 0, 0deg);
  transform: rotateY(0deg);
  -webkit-box-shadow: inset 0 0 0 99999px rgba(0, 0, 0, 0);
  box-shadow: inset 0 0 0 99999px rgba(0, 0, 0, 0);
}

.view.push.flipHorizontal.active.transition {
  -webkit-transform: perspective(2000) rotate3d(0, 1, 0, -180deg);
  transform: rotateY(-180deg);
  -webkit-box-shadow: inset 0 0 0 99999px rgba(0, 0, 0, 0.5);
  box-shadow: inset 0 0 0 99999px rgba(0, 0, 0, 0.5);
}

.view.pop.flipHorizontal {
  -webkit-transform: perspective(2000) rotate3d(0, 1, 0, -180deg);
  transform: rotateY(-180deg);
  -webkit-box-shadow: inset 0 0 0 99999px rgba(0, 0, 0, 0.5);
  box-shadow: inset 0 0 0 99999px rgba(0, 0, 0, 0.5);
}

.view.pop.flipHorizontal.transition {
  -webkit-transform: perspective(2000) rotate3d(0, 1, 0, 0deg);
  transform: rotateY(0deg);
  -webkit-box-shadow: inset 0 0 0 99999px rgba(0, 0, 0, 0);
  box-shadow: inset 0 0 0 99999px rgba(0, 0, 0, 0);
}

.view.pop.flipHorizontal.active {
  -webkit-transform: perspective(2000) rotate3d(0, 1, 0, 0deg);
  transform: rotateY(0deg);
  -webkit-box-shadow: inset 0 0 99999px 99999px rgba(0, 0, 0, 0);
  box-shadow: inset 0 0 99999px 99999px rgba(0, 0, 0, 0);
}

.view.pop.flipHorizontal.active.transition {
  -webkit-transform: perspective(2000) rotate3d(0, 1, 0, 180deg);
  transform: rotateY(180deg);
  -webkit-box-shadow: inset 0 0 99999px 99999px rgba(0, 0, 0, 0.5);
  box-shadow: inset 0 0 99999px 99999px rgba(0, 0, 0, 0.5);
}
/* ... */

